fixed auto-update publi media when refreshing project medias, buttons on tablet

--- a/public/src/vue/less/_modal.less
+++ b/public/src/vue/less/_modal.less
@@ -282,6 +282,8 @@
           border-left: solid var(--input-border-width) var(--input-border-color);
           border-radius: var(--input-border-radius);
           border-radius: 0;
+
+          font-size:14pt !important;
       
           // background: linear-gradient(transparent, transparent 28px, #91D1D3 28px);
           // background-size: 30px 30px;
